AI추천 및 필터 UI 수정

--- a/templates/oneroom/index.html
+++ b/templates/oneroom/index.html
@@ -12,76 +12,75 @@
                             <input type="search">
                             <button>검색버튼</button>
                         </div>
-                        <button data-popup="filter_box">필터</button>
+                        <button data-popup="filter_box">AI 추천</button>
                         <div class="filter_box">
                             <form>
                                 <fieldset>
                                     <div>
-                                        <button>초기화</button>
+                                        <button class="ai_reset_btn">초기화</button>
                                     </div>
                                     <ul>
                                         <li>
                                             <label>반려동물</label>
                                             <div>
-                                                <input type="radio" name="pet" value="1">
-                                                <label>Yes</label>
-                                                <input type="radio" name="pet" value="0">
-                                                <label>No</label>
+                                                <input type="radio" id="pet_yes" name="pet" value="1">
+                                                <label for="pet_yes">Yes</label>
+                                                <input type="radio" id="pet_no" name="pet" value="0">
+                                                <label for="pet_no">No</label>
                                             </div>
                                         </li>
                                         <li>
                                             <label>자차보유</label>
                                             <div>
-                                                <input type="radio" name="car" value="1">
-                                                <label>Yes</label>
-                                                <input type="radio" name="car" value="0">
-                                                <label>No</label>
+                                                <input type="radio" id="car_yes" name="car" value="1">
+                                                <label for="car_yes">Yes</label>
+                                                <input type="radio" id="car_no" name="car" value="0">
+                                                <label for="car_no">No</label>
                                             </div>
                                         </li>
                                         <li>
                                             <label>외향/내향</label>
                                             <div>
-                                                <input type="radio" name="personality" value="1">
-                                                <label>Yes</label>
-                                                <input type="radio" name="personality" value="0">
-                                                <label>No</label>
+                                                <input type="radio" id="personality_yes" name="personality" value="1">
+                                                <label for="personality_yes">Yes</label>
+                                                <input type="radio" id="personality_no" name="personality" value="0">
+                                                <label for="personality_no">No</label>
                                             </div>
                                         </li>
                                     </ul>
                                     <button class="ai_reco_btn">Toch  AI 추천</button>
                                     <span class="material-icons-outlined closeBtn">
-                                        close
+                                        ×
                                     </span>
                                 </fieldset>
                             </form>
                         </div>
 
-                        <button data-popup="AI_box">AI 추천</button>
+                        <button data-popup="AI_box">필터</button>
 
                         <div class="AI_box">
                             <form>
                                 <fieldset>
-                                    <div>
+                                    <div class="filter_header">
                                         <button>초기화</button>
                                     </div>
 
                                     <ul>
-                                        <li>
+                                        <li class="transaction_type">
                                             <label>거래유형</label>
                                             <mark>연세</mark>
                                             <div>
-                                                <input type="radio" checked>
-                                                <label>연세</label>
-                                                <input type="radio">
-                                                <label>월세</label>
-                                                <input type="radio">
-                                                <label>전세</label>
+                                                <input type="radio" id="yearly" name="transaction_type">
+                                                <label for="yearly">연세</label>
+                                                <input type="radio" id="monthly" name="transaction_type">
+                                                <label for="monthly">월세</label>
+                                                <input type="radio" id="jeonse" name="transaction_type">
+                                                <label for="jeonse">전세</label>
                                             </div>
                                         </li>
                                         <li>
                                             <label>보증금</label>
                                             <mark>500만원</mark>
-{#                                            <label for="deposit_range"></label>#}
                                             <div>
                                                 <div class="rangeBox">
                                                     <div>
@@ -89,7 +88,6 @@
                                                         <span>
                                                             <span>500만원</span>
                                                         </span>
-{#                                                        <input type="range" id="deposit_range" name="deposit_range" min="0" max="5000" step="100">#}
                                                     </div>
                                                 </div>
                                             </div>
@@ -111,7 +109,7 @@
                                     </ul>
 
                                     <span class="material-icons-outlined closeBtn">
-                                        close
+                                        ×
                                     </span>
                                 </fieldset>
                             </form>
