--- a/static/css/global.css
+++ b/static/css/global.css
@@ -188,7 +188,7 @@ mark > *{color: #ff9900;}
 [class*='_box'] fieldset > div button::before{content: ''; width: 12px; height: 16px; background: url('../images/resetIcon.png') no-repeat center / cover; margin-right: 10px;}
 [class*='_box'] fieldset > ul{border-width: 1px 0; border-style: solid; border-color: #ebebeb;}
 [class*='_box'] fieldset > ul li{display: flex; align-items: center; padding: 20px;}
-[class*='_box'] fieldset > ul li:not(:last-child){border-bottom: 1px solid #ebebeb;}
+[class*='_box'] fieldset > ul li:not(:last-child){border-bottom: 1px solid #ebebeb; border-top: 1px solid #ebebeb;}
 [class*='_box'] fieldset > ul li > label{width: 100px; font-size: 18px;}
 [class*='_box'] fieldset > ul li div{display: flex;}
 .filter_box fieldset > ul li div input[type='radio'] + label{font-size: 17px; color: #888888; display: flex; align-items: center;}
@@ -199,6 +199,8 @@ mark > *{color: #ff9900;}
 [class*='_box'] fieldset > button{font-size: 18px; font-weight: 700; width: 160px; height: 45px; border: 1px solid black; display: block; margin: 20px auto;}
 [class*='_box'] fieldset .closeBtn{position: absolute; left: 15px; top: 20px; font-size: 40px; cursor: pointer;}
 
+.AI_box {width:603px}
+.AI_box .filter_header { width: 563px }
 .AI_box fieldset > ul li{flex-direction: column; align-items: flex-start;}
 .AI_box fieldset > ul li label{font-size: 18px; margin-bottom: 10px;}
 .AI_box fieldset > ul li mark{font-size: 24px; font-weight: 700; color: #ff9900; margin-bottom: 20px;}
@@ -214,8 +216,7 @@ mark > *{color: #ff9900;}
 .AI_box fieldset > ul li > div .rangeBox div > span:nth-of-type(1){left: -10px;}
 .AI_box fieldset > ul li > div .rangeBox div > span:nth-of-type(2){right: -10px;}
 .AI_box fieldset > ul li > div .rangeBox div > span:nth-of-type(2) span{position: absolute; left: -10px; top: 30px; font-size: 13px; white-space: nowrap;}
-
-
+.transaction_type { width: 500px; border: none }
 /* 메뉴 포인트 */
 .point::after{content: ''; width: 5px; height: 5px; background-color: #46ccbb; border-radius: 100%; display: inline-block; vertical-align: text-top; margin-left: 8px;}
 .bold{font-weight: 800; display: flex; align-items: center;}
