--- a/static/css/global.css
+++ b/static/css/global.css
@@ -210,13 +210,15 @@ mark > *{color: #ff9900;}
 .AI_box fieldset > ul li > div input[type='radio']:checked + label{background-color: #ff9900; color: white;}
 /* .AI_box fieldset > ul li div{width: 100%; padding-bottom: 30px;} */
 .AI_box fieldset > ul li > div{width: 100%;}
-.AI_box fieldset > ul li > div .rangeBox{ width: 100%; height: 4px; background-color: #eeeeee; margin-bottom: 30px;}
+.AI_box fieldset > ul li > div .rangeBox{ width: 100%; height: 4px; background-color: #eeeeee; margin-bottom: 30px; border: 1px solid silver; border-radius: 25px}
 .AI_box fieldset > ul li > div .rangeBox div{width: 50%; height: 100%; background-color: #ff9900; position: relative;}
 .AI_box fieldset > ul li > div .rangeBox div > span{content: ''; width: 23px; height: 23px; background: url('../images/rangeIcon.png') no-repeat center / cover; position: absolute; top: -10px;}
 .AI_box fieldset > ul li > div .rangeBox div > span:nth-of-type(1){left: -10px;}
 .AI_box fieldset > ul li > div .rangeBox div > span:nth-of-type(2){right: -10px;}
 .AI_box fieldset > ul li > div .rangeBox div > span:nth-of-type(2) span{position: absolute; left: -10px; top: 30px; font-size: 13px; white-space: nowrap;}
 .transaction_type { width: 500px; border: none }
+
+
 /* 메뉴 포인트 */
 .point::after{content: ''; width: 5px; height: 5px; background-color: #46ccbb; border-radius: 100%; display: inline-block; vertical-align: text-top; margin-left: 8px;}
 .bold{font-weight: 800; display: flex; align-items: center;}
@@ -253,6 +255,8 @@ footer > div > address{font-style: normal; display: flex; flex-wrap: nowrap;}
 footer > div > address > *:not(:last-child){margin-right: 20px;}
 footer > div > address dl{display: flex;}
 footer > div > address dl dt::after{content: ':'; display: inline-block; margin: 0 5px;}
+
+
 
 .none {
     display: none;
