--- a/templates/oneroom/index.html
+++ b/templates/oneroom/index.html
@@ -2,6 +2,8 @@
 {% block content %}
     <!-- 원룸 추천 로딩 gif -->
     <div class="loading_page none" style="height: 100vh; opacity: 0.5; z-index: 4; background-image: url(../../static/images/ai_loading.gif);  background-size: 10%"></div>
+    <!-- 원룸 추천 로딩 gif -->
+
     <div class="subPage oneRoomPage">
         <section class="oneRoomArea">
             <h2 class="hidden">원룸</h2>
@@ -86,7 +88,6 @@
                                                 <div class="rangeBox">
                                                     <input type="range" min="0" max="1000" value="0" step="10" class="filter_range_input deposit_range" style="width:563px">
                                                 </div>
-{#
                                             </div>
                                         </li>
 
@@ -402,14 +403,27 @@
 
         ai_box.addEventListener('input', e => {
             const self = e.target;
+            // 리스트 초기화
             removeRoomItems();
-            // 거래 유형 필터
+            // 거래 유형(전,월세) 필터
             if(self.id === 'yearly') {
-
+                positions.map(room => {
+                    if(room.rent_type === '연세') {
+                        renderRoom(room);
+                    }
+                })
             } else if(self.id === 'monthly') {
-
+                positions.map(room => {
+                    if(room.rent_type === '월세') {
+                        renderRoom(room);
+                    }
+                })
             } else if(self.id === 'jeonse') {
-
+                positions.map(room => {
+                    if(room.rent_type === '전세') {
+                        renderRoom(room);
+                    }
+                })
             }
 
             // 보증금 필터
