--- a/templates/common/login.html
+++ b/templates/common/login.html
@@ -16,13 +16,13 @@
                                    title="userPW">
                         </li>
                     </ul>
-                    <p>ID에 학교 이메일 또는 Toch ID를 입력하세요.</p>
+                    <p>학교 E-mail 또는 ID를 입력하세요.</p>
                     <input type="submit" value="로그인">
                     <p>
-                        <mark><a href="login_Find.html">Toch ID 또는 암호를 잊으셨나요?</a></mark>
+                        <mark><a href="login_Find.html">ID 또는 암호를 잊으셨나요?</a></mark>
                     </p>
                     <p>
-                        <mark>Toch ID가 없으신가요?<a href="#">지금 생성.</a></mark>
+                        <mark>Toch ID가 없으신가요? <a href="#">지금 생성.</a></mark>
                     </p>
                 </fieldset>
             </form>
